0.7.0   (unreleased)
	support autoincrement for sqlite
	support table constraints without separating comma for sqlite
	switch source from literate to regular haskell
	use prettyprinter lib instead of pretty
	nested block comments regressed - post a bug if you need this
	fixed fixity parsing of union, except and intersect (matches postgres docs now)
0.6.1   added odbc handling to sqlsqerver dialect
		added sqlserver dialect case for convert function
0.6.0
        tested with ghc 8.8.1 also
        change the dialect handling - now a dialect is a bunch of flags
          plus a keyword list, and custom dialects are now feasible
          (still incomplete)
        fix parsing for a lot of things which are keywords in the standard
        fix bug with cte pretty printing an extra 'as', which the parser
          also incorrectly accepted
        bug fix: allow keywords that are quoted to be parsed as identifiers

0.5.0
        update to work with ghc 8.6.5, also tested with 8.4.4 and 8.2.1
	rename some of the modules Lexer -> Lex, Parser -> Parse
	add a separate lexer to simplify code and speed up parsing
	replace SqlIndent with new tool, SimpleSqlParserTool (amazing
	  name) which can indent, and parse and lex.
	experiments in new approach to dealing with fixities with separate
	  pass after parsing
	dml :add support for insert, update, delete and truncate
	ddl: add limited support for create schema, plus drop schema
	  create, alter and drop table with defaults and constraints
	  create, alter and drop for domain, view, sequence
	  create and drop for assertion
	access control: simple create and drop for role
	simple grant and revoke
	limited support for transaction management: start transation,
	rollback, commit, savepoint
	fix the precendence of operators which was following the weird
	  postgresql 9.4 and earlier precendences instead of the standard
	refactor the syntax for names, identifiers and strings slightly